# codex-mod

./: .gitignore  AGENTS.md  ANDROID_BUILD.md  ANDROID_BUILD_ACTION_PLAN.md  ANDROID_BUILD_COMPLETE.md  ANDROID_BUILD_STATUS.md  ANDROID_BUILD_SUCCESS.md  ANDROID_TERMUX_TUI_AUDIT.md  BUILD_SCRIPT.md  BUILD_SCRIPTS.md  CHANGELOG.md  INTEGRATION_BACKLOG.md  JS-REPL-REVIEW.md  README.md  READY_FOR_TERMUX.md  TAGGED_MEMORIES_PLAN.md  TEMP_ALLOW_CLEANUP_AUDIT.md  TEMP_ALLOW_CLEANUP_CHECKLIST.md  android-build-demo.sh  build-fast.sh  build-fast.zsh  build-fast.zsh.backup  build.zsh  clean-build-cache.zsh  cliff.toml  config.toml.example  defs.bzl  improvement-plan.md  justfile  pre-release.zsh  questions-interactions.md
.github/actions/windows-code-sign/: action.yml
code-rs/: CODEX_RS_UPSTREAM_PARITY.md  Cargo.toml  MIGRATION_GUIDE.md  MIGRATION_QUICK_REFERENCE.md  README.md  config.md  rust-toolchain.toml
code-rs/.cargo/: config.toml
code-rs/ansi-escape/src/: lib.rs
code-rs/app-server/: Cargo.toml
code-rs/app-server-protocol/: Cargo.toml
code-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  schema_fixtures.rs
code-rs/app-server/src/: code_message_processor.rs  command_exec.rs  error_code.rs  exec_server_spawn.rs  external_agent_config_api.rs  fs_api.rs  fs_watch.rs  fuzzy_file_search.rs  lib.rs  message_processor.rs  outgoing_message.rs  thread_state.rs  transport.rs
code-rs/app-server/tests/: binary_smoke.rs  websocket_parity.rs
code-rs/apply-patch/src/: lib.rs  parser.rs  standalone_executable.rs  tree_sitter_utils.rs
code-rs/arg0/src/: lib.rs
code-rs/backend-client/: Cargo.toml
code-rs/backend-client/src/: client.rs  types.rs
code-rs/browser/: Cargo.toml
code-rs/browser/src/: assets.rs  config.rs  global.rs  lib.rs  manager.rs  page.rs
code-rs/chatgpt/: Cargo.toml
code-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs
code-rs/cli/: Cargo.toml
code-rs/cli/src/: bridge.rs  config_cmd.rs  debug_app_server.rs  debug_sandbox.rs  lib.rs  llm.rs  login.rs  main.rs  mcp_cmd.rs  proto.rs  secrets_cmd.rs
code-rs/cloud-tasks/: Cargo.toml
code-rs/cloud-tasks-client/src/: http.rs  mock.rs
code-rs/cloud-tasks/src/: app.rs  env_detect.rs  lib.rs  scrollable_diff.rs  ui.rs  util.rs
code-rs/code-auto-drive-core/: Cargo.toml
code-rs/code-auto-drive-core/src/: auto_compact.rs  auto_coordinator.rs  auto_drive_history.rs  controller.rs  coordinator_router.rs  coordinator_user_schema.rs  faults.rs  lib.rs  retry.rs
code-rs/code-auto-drive-diagnostics/src/: lib.rs
code-rs/code-version/: build.rs
code-rs/common/src/: config_override.rs  fuzzy_match.rs  lib.rs  model_picker_order.rs  model_presets.rs  sandbox_summary.rs  (+1 more)
code-rs/connectors/: Cargo.toml
code-rs/connectors/src/: lib.rs
code-rs/context-timeline/: Cargo.toml
code-rs/context-timeline/src/: lib.rs  timeline.rs
code-rs/core/: Cargo.toml  config.schema.codex.json  prompt_coordinator.md
code-rs/exec-server/: Cargo.toml  README.md
code-rs/features/: Cargo.toml
code-rs/features/src/: lib.rs  tests.rs
code-rs/hooks/: Cargo.toml
code-rs/hooks/src/: legacy_notify.rs  lib.rs  registry.rs  schema.rs  types.rs  user_notification.rs
code-rs/hooks/src/engine/: command_runner.rs  discovery.rs  dispatcher.rs  mod.rs  output_parser.rs
code-rs/hooks/src/events/: common.rs  mod.rs  pre_tool_use.rs  session_start.rs  stop.rs  user_prompt_submit.rs
code-rs/keyring-store/: Cargo.toml
code-rs/login/: Cargo.toml
code-rs/mcp-call-limiter/: Cargo.toml
code-rs/mcp-types/: generate_mcp_types.py
code-rs/memories-state/: Cargo.toml
code-rs/memories-state/src/: lib.rs
code-rs/message-history/: Cargo.toml
code-rs/message-history/src/: lib.rs
code-rs/network-proxy/: Cargo.toml
code-rs/ollama/: Cargo.toml
code-rs/ollama/src/: client.rs  parser.rs  url.rs
code-rs/otel/: Cargo.toml
code-rs/package-manager/: Cargo.toml
code-rs/package-manager/src/: archive.rs  manager.rs  platform.rs
code-rs/protocol/: Cargo.toml
code-rs/responses-api-proxy/: Cargo.toml
code-rs/responses-api-proxy/src/: lib.rs  read_api_key.rs
code-rs/rmcp-client/: Cargo.toml
code-rs/rmcp-client/src/: auth_status.rs  lib.rs  logging_client_handler.rs  oauth.rs  perform_oauth_login.rs  program_resolver.rs  rmcp_client.rs  utils.rs
code-rs/scripts/: create_github_release.sh
code-rs/secrets/: Cargo.toml
code-rs/shell-command/: Cargo.toml
code-rs/shell-command/src/: bash.rs  command_canonicalization.rs  lib.rs  parse_command.rs
code-rs/shell-command/src/command_safety/: cmd_safe_commands.rs  context.rs  fork_bomb.rs  is_dangerous_command.rs  is_safe_command.rs  mod.rs  powershell_parser.ps1  windows_dangerous_commands.rs  windows_safe_commands.rs
code-rs/shell-command/src/invocation/: cmd_script.rs  mod.rs  prefix.rs  word_only.rs  wrappers.rs
code-rs/shell-escalation/: Cargo.toml
code-rs/skills/: Cargo.toml  build.rs
code-rs/skills/src/: lib.rs
code-rs/skills/src/assets/system_skills/plan/scripts/: plan_utils.py
code-rs/skills/src/assets/system_skills/skill-creator/: SKILL.md
code-rs/skills/src/assets/system_skills/skill-creator/scripts/: quick_validate.py
code-rs/skills/src/assets/system_skills/skill-installer/scripts/: github_utils.py  install-curated-skill.py  list-curated-skills.py
code-rs/tui/: Cargo.toml  HISTORY_CELLS_PLAN.md  build.rs
code-rs/windows-sandbox-rs/: Cargo.toml
codex-cli/: package.json
codex-rs/: Cargo.toml
codex-rs/.cargo/: config.toml
codex-rs/codex-mcp/: BUILD.bazel
codex-rs/feedback/: Cargo.toml
codex-rs/lmstudio/: Cargo.toml
codex-rs/models-manager/: models.json
codex-rs/tui/: Cargo.toml
docs/: config.md  example-config.md  exec.md  getting-started.md  skills.md  slash-commands.md
docs/release-notes/: RELEASE_NOTES.md
scripts/: check-codex-path-deps.sh  check-settings-overlay-chrome.sh  check-settings-ui-chrome-apis.sh  create-code-only-zip.sh
scripts/upstream-merge/: diff-crates.sh  highlight-critical-changes.sh  log-merge.sh  report-upstream-delta.sh
(+1689 files in other folders)
