[package]
edition.workspace = true
license.workspace = true
name = "code-features"
version.workspace = true

[lib]
doctest = false
name = "code_features"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
code-login = { workspace = true }
code-otel = { workspace = true }
code-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

