[package]
name = "codex-message-history"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fs2 = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }
