[package]
edition = "2024"
name = "code-responses-api-proxy"
version = { workspace = true }

[lib]
name = "code_responses_api_proxy"
path = "src/lib.rs"

[[bin]]
name = "code-responses-api-proxy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
code-process-hardening = { workspace = true }
ctor = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiny_http = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
