[package]
edition = "2024"
name = "code-rmcp-client"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
code-keyring-store = { workspace = true }
code-protocol = { workspace = true }
mcp-types = { workspace = true }
oauth2 = { workspace = true }
rmcp = { version = "0.7.0", default-features = false, features = [
    "auth",
    "base64",
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
schemars = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
tiny_http = { workspace = true }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "io-std",
    "time",
] }
tracing = { version = "0.1.41", features = ["log"] }
url = { workspace = true }
urlencoding = { workspace = true }
webbrowser = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
keyring = { workspace = true }
serial_test = "3.2.0"
tempfile = { workspace = true }
